--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Api RESTful para gestion de giftcards",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+}
+,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mfalvarezd/giftPointBackend.git"
