--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Api RESTful para gestion de giftcards",
   "main": "index.js",
   "scripts": {
-  "start": "node app.js",
-  "dev": "nodemon app.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-}
-,
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mfalvarezd/giftPointBackend.git"
@@ -27,6 +26,8 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.0.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
