--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
     "jest": "^30.0.3",
